welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:23: error: not found: value retour
  retour(14)
  ^